--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"devDependencies": {
+		"@sveltejs/adapter-cloudflare": "^4.1.0",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.66",
 		"@sveltejs/kit": "^1.0.0-next.551",
 		"autoprefixer": "^10.4.8",
